--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -10,9 +10,18 @@ jobs:
       id-token: write
     steps:
     - uses: actions/checkout@v4
+    - name: Setup python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.12
+        architecture: x64
     - name: Make output directory
-      run: "mkdir _site"
-    - name: Build site
+      run: "mkdir -p _site/datatig"
+    - name: Install DataTig
+      run: "pip install datatig"
+    - name: Build DataTig site
+      run: "python -m datatig.cli build . --staticsiteoutput _site/datatig --staticsiteurl https://jarofgreen.github.io/event-website-template/datatig"
+    - name: Build Jekyll site
       run: "docker run --rm --volume=\"${{ github.workspace }}:/srv/jekyll:Z\" jekyll/builder:4 /bin/bash -c 'chmod 777 /srv/jekyll && jekyll build _site'"
     - name: Upload Artifact
       uses: actions/upload-pages-artifact@v3
