--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
+# TOUSE: Replace with the title of your group
 title: Event Website Template
+# TOUSE: Replace url and baseurl with your site address
 url: https://jarofgreen.github.io
 baseurl: /event-website-template
 
