Blogs and Events have optional description that are used in listings

--- a/datatig.yaml
+++ b/datatig.yaml
@@ -16,6 +16,9 @@ types:
     - id: title
       key: title
       title: Title
+    - id: description
+      key: description
+      title: Description
     - id: content
       key: content
       title: Content
@@ -57,6 +60,9 @@ types:
     - id: title
       key: title
       title: Title
+    - id: description
+      key: description
+      title: Description
     - id: content
       key: content
       title: Content
