Calendars section in DataTig config - correct id template

--- a/datatig.yaml
+++ b/datatig.yaml
@@ -73,4 +73,4 @@ calendars:
         summary: title
         start: start
         end: end
-        id: "event_ID@example.com"
+        id: "event_{{record_id}}@example.com"
