--- a/datatig.yaml
+++ b/datatig.yaml
@@ -22,6 +22,7 @@ types:
     - id: content
       key: content
       title: Content
+      type: markdown
     - id: location
       key: location
       title: Location
@@ -69,6 +70,7 @@ types:
     - id: content
       key: content
       title: Content
+      type: markdown
 calendars:
   main:
     timezone: Europe/London
