Add layout field to event and blog with instructions with what to set it to

--- a/datatig.yaml
+++ b/datatig.yaml
@@ -37,6 +37,14 @@ types:
       title: End
       type: datetime
       timezone: Europe/London
+    # We always want the correct layout set.
+    # There is no feature in DataTig to do this automatically
+    # for us yet, so for now we'll just add a field
+    # and tell people what value it should have.
+    - id: layout
+      key: layout
+      title: layout
+      description: This should always be set to event
 - id: link
   directory: _link
   list_fields:
@@ -71,6 +79,14 @@ types:
       key: content
       title: Content
       type: markdown
+    # We always want the correct layout set.
+    # There is no feature in DataTig to do this automatically
+    # for us yet, so for now we'll just add a field
+    # and tell people what value it should have.
+    - id: layout
+      key: layout
+      title: layout
+      description: This should always be set to blog
 calendars:
   main:
     timezone: Europe/London
